[gd_scene load_steps=2 format=3 uid="uid://y3r5jtjnwcye"]

[ext_resource type="Script" path="res://trees/cocoa_bean_base.gd" id="1_7q65v"]

[node name="CocoaBeanBase" type="RigidBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_7q65v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]

[node name="Skin" type="Sprite2D" parent="."]

[node name="ConsumeTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="EnableTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_body_entered"]
[connection signal="timeout" from="ConsumeTimer" to="." method="_on_consume_timer_timeout"]
[connection signal="timeout" from="EnableTimer" to="." method="_on_enable_timer_timeout"]
